gitops-main/base/infrastructure/sqlserver/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sqlserver
  namespace: sqlserver
spec:
  revisionHistoryLimit: 2
  serviceName: sqlserver
  replicas: 1
  selector:
    matchLabels: { app: sqlserver }
  template:
    metadata:
      labels: { app: sqlserver }
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2019-latest
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "400m"
              memory: "2Gi"
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssqldata
              mountPath: /var/opt/mssql
  volumeClaimTemplates:
    - metadata:
        name: mssqldata
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: longhorn
        resources:
          requests:
            storage: 2Gi
