gitops-main/base/infrastructure/sqlserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: sqlserver
spec:
  clusterIP: None
  ports:
    - port: 1433
      targetPort: 1433
  selector:
    app: sqlserver
