gitops-main/base/infrastructure/sqlserver/allow-ingress-from-job.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-job
  namespace: sqlserver
spec:
  podSelector:
    matchLabels:
      app: sqlserver
  policyTypes:
    - Ingress
  
  ingress:
    - from:
        - podSelector:
            matchLabels:
              job-name: apply-mssql-job
      ports:
        - protocol: TCP
          port: 1433
