gitops-main/base/infrastructure/sqlserver/allow-ingress-from-order-and-payment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-order-and-payment
  namespace: sqlserver
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: order-tracking-service
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: payment-service
      ports:
        - protocol: TCP
          port: 1433
