gitops-main/base/infrastructure/sqlserver/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: sqlserver
spec:
  podSelector: {}
  policyTypes:
    - Ingress
